# ucid

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DCO  DEPLOYMENT.md  DISCLAIMER  Dockerfile  GOVERNANCE.md  INSTALL.md  MANIFEST.in  Makefile  NOTICE  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TESTING.md  TROUBLESHOOTING.md  codecov.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
.clusterfuzzlite/: Dockerfile  README.md  build.sh  fuzz_creator.py  fuzz_h3.py  fuzz_parser.py  fuzz_validator.py  project.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml  license-header.txt  requirements-docs.txt  requirements-lint.txt  requirements-test.txt
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  question.md  security.yml
.github/requirements/: lint.txt  test.txt
.github/workflows/: cflite.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  fuzzing.yml  nightly.yml  publish.yml  release.yml  sbom.yml  scorecard.yml  stale.yml
article/: README.txt  bibliography.bib  main.bbl  main.tex
assets/: BRAND_GUIDELINES.md  README.md
benchmarks/: README.md  benchmark_batch.py  benchmark_create.py  benchmark_parse.py  benchmark_suite.py  benchmark_validate.py
benchmarks/configs/: default.json  full.json  quick.json
benchmarks/results/: baseline.json
configs/: README.md  default.yaml  logging.yaml  paper_benchmark.yaml  production.yaml
data/: README.md  cities.json  contexts.json  grading.json  transit.json
data/samples/: sample_ucids.json
datasets/: DATASET_CARD.md  README.md  benchmark_suite.json  generate_academic_dataset.py  ucid_academic_statistics.json
datasets/schemas/: city.schema.json  ucid.schema.json
docs/: README.md  conf.py  index.md  index.rst
docs/instructions/: 00_project_overview.md  01_installation.md  02_quickstart.md  03_ucid_standard.md  04_city_codes_unlocode.md  05_h3_geohash_s2_interop.md  06_temporal_model.md  07_scoring_system.md  08_context_plugin_architecture.md  09_context_15min.md  10_context_transit.md  11_context_climate.md  12_context_vitality.md  13_context_equity.md  14_context_walkability.md  15_data_integration_osm.md  16_data_integration_gtfs.md  17_data_integration_remote_sensing.md  18_data_integration_population.md  19_io_formats.md  20_database_postgis.md  21_api_service_fastapi.md  22_realtime_streaming.md  23_distributed_compute.md  24_ml_module.md  25_benchmarking.md  26_quality_assurance.md  27_security_supply_chain.md  28_release_process.md  29_governance_community.md
examples/: README.md  batch_processing.py  demo.py  geojson_export.py  multi_city_example.py  multi_context.py  quickstart.py
notebooks/: 00_ucid_basics.ipynb  01_citygrid_scan_basics.ipynb  02_15min_city_isochrones.ipynb  03_transit_gtfs_quality.ipynb  04_walkability_connectivity.ipynb  05_climate_heat_green_shade.ipynb  06_vitality_poi_entropy.ipynb  07_equity_gap_gini.ipynb  08_temporal_trends_anomalies.ipynb  09_prediction_baseline_gbdt.ipynb  10_transfer_learning_cities.ipynb  11_intervention_impact.ipynb  12_distributed_dask_grid.ipynb  13_distributed_ray_training.ipynb  14_realtime_streaming_windows.ipynb  15_api_service_end_to_end.ipynb  16_geoparquet_export.ipynb  17_postgis_roundtrip.ipynb  18_comparison_osmnx_pandana.ipynb  19_data_quality_uncertainty.ipynb  20_i18n_localization.ipynb  21_satellite_raster_pipeline.ipynb  22_population_normalization.ipynb  23_hotspot_spatial_stats.ipynb  24_report_generation.ipynb  25_dashboard_data_contracts.ipynb  26_sensor_iot_mock.ipynb  27_ar_vr_export_stub.ipynb  28_security_audit.ipynb  29_release_dry_run.ipynb  README.md
scripts/: README.md  benchmark.py  download_sample_data.py  generate_city_registry.py  generate_dataset.py  load_test.py  release.py
src/: README.md
src/ucid/: README.md  __init__.py  cli.py
src/ucid/api/: __init__.py  app.py  dependencies.py  errors.py  middleware.py  models.py  routes.py
src/ucid/client/: __init__.py  async_client.py  client.py  exceptions.py  models.py
src/ucid/compute/: __init__.py  backpressure.py  base.py  chunking.py  dask_backend.py  local.py  ray_backend.py
src/ucid/contexts/: __init__.py  base.py  climate.py  equity.py  fifteen_minute.py  registry.py  transit.py  utils.py  vitality.py  walkability.py
src/ucid/core/: __init__.py  constants.py  errors.py  models.py  parser.py  registry.py  validator.py
src/ucid/data/: __init__.py  cache.py  cities.py  cities_registry.json  gtfs.py  gtfs_client.py  osm.py  osm_client.py  poi_fetcher.py  population.py  provenance.py  raster.py  sources.py
src/ucid/i18n/: __init__.py  locales.py  messages.py  translations.py
src/ucid/io/: __init__.py  csv.py  geojson.py  geoparquet.py  parquet.py  postgis.py  schemas.py
src/ucid/ml/: __init__.py  baselines.py  calibration.py  drift.py  evaluation.py  features.py  model_cards.py  predictors.py  transfer.py
src/ucid/monitoring/: __init__.py  alerts.py  health.py  metrics.py  tracing.py
src/ucid/realtime/: __init__.py  eventstore.py  hsl.py  ingestor.py  schemas.py  stubs.py  (+1 more)
tests/: README.md  conftest.py  test_contexts.py  test_core.py
tests/fixtures/: data.py  sample_ucids.json
tests/integration/: test_api_endpoints.py  test_end_to_end.py  test_osm_integration.py
tests/performance/: test_benchmarks.py
tests/unit/: test_api.py  test_cli.py  test_client.py  test_compute.py  test_constants.py  test_contexts.py  test_contexts_base.py  test_core_parser.py  test_data_ops.py  test_errors.py  test_i18n.py  test_io.py  test_ml_pipeline.py  test_models.py  test_monitoring.py  test_realtime.py  test_scoring.py  test_spatial_ops.py  test_temporal.py  test_utils.py  test_viz.py
tools/: README.md  check_licenses.py  generate_docs.py  release_notes.py  run_benchmarks.py  sync_registry.py  update_version.py  validate_data.py
(+32 files in other folders)
