[project]
name = "UCID"
version = "1.0.3"
description = "Urban Context Identifier - A standardized temporal identifier system for comprehensive urban context analysis across global cities"
readme = "README.md"
license = {text = "EUPL-1.2"}
authors = [
    {name = "UCID Foundation", email = "contact@ucid.org"}
]
maintainers = [
    {name = "UCID Foundation", email = "contact@ucid.org"}
]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "urban-planning",
    "urban-analysis",
    "city-planning",
    "gis",
    "geospatial",
    "spatial-analysis",
    "h3",
    "hexagonal-grid",
    "15-minute-city",
    "walkability",
    "transit",
    "public-transportation",
    "gtfs",
    "openstreetmap",
    "osm",
    "climate",
    "heat-island",
    "equity",
    "accessibility",
    "livability",
    "smart-city",
    "sustainable-cities",
    "urban-mobility",
    "geodata",
    "temporal-analysis",
]
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "geopandas>=0.14.0,<2.0.0",
    "shapely>=2.0.0,<3.0.0",
    "pyproj>=3.5.0,<4.0.0",
    "h3>=3.7.0,<5.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "httpx>=0.25.0,<1.0.0",
]

[project.optional-dependencies]
contexts = [
    "osmnx>=1.8.0,<2.0.0",
    "networkx>=3.1.0,<4.0.0",
]
ml = [
    "scikit-learn>=1.3.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
]
temporal = [
    "statsmodels>=0.14.0,<1.0.0",
]
dask = [
    "dask[complete]>=2023.10.0,<2026.0.0",
]
ray = [
    "ray[default]>=2.8.0,<3.0.0",
]
raster = [
    "rasterio>=1.3.0,<2.0.0",
]
api = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
]
db = [
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "geoalchemy2>=0.14.0,<1.0.0",
]
viz = [
    "matplotlib>=3.7.0,<4.0.0",
    "plotly>=5.17.0,<7.0.0",
    "folium>=0.15.0,<1.0.0",
]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "hypothesis>=6.92.0,<7.0.0",
    "mypy>=1.7.0,<2.0.0",
    "ruff>=0.1.9,<1.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]
docs = [
    "sphinx>=7.2.0,<9.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
    "myst-parser>=2.0.0,<5.0.0",
    "nbsphinx>=0.9.0,<1.0.0",
]
security = [
    "pip-audit>=2.6.0,<3.0.0",
    "bandit>=1.7.0,<2.0.0",
    "cyclonedx-bom>=4.0.0,<5.0.0",
]
all = [
    "UCID[contexts,ml,temporal,dask,ray,raster,api,db,viz]",
]

[project.scripts]
ucid = "ucid.cli:cli"

[project.entry-points."ucid.contexts"]
fifteen_minute = "ucid.contexts.fifteen_minute:FifteenMinuteContext"
transit = "ucid.contexts.transit:TransitContext"
climate = "ucid.contexts.climate:ClimateContext"
vitality = "ucid.contexts.vitality:VitalityContext"
equity = "ucid.contexts.equity:EquityContext"
walkability = "ucid.contexts.walkability:WalkabilityContext"

[project.urls]
# Self-links (automatically verified)
"PyPI" = "https://pypi.org/project/UCID/"

# GitHub URLs (verified via Trusted Publishing)
"Homepage" = "https://github.com/ucid-foundation/ucid"
"Repository" = "https://github.com/ucid-foundation/ucid"
"Source Code" = "https://github.com/ucid-foundation/ucid"
"Download" = "https://github.com/ucid-foundation/ucid/releases"

# Documentation (custom icon)
"Documentation" = "https://ucid-foundation.github.io/ucid"
"Docs" = "https://ucid-foundation.github.io/ucid"

# Changelog (custom icon)
"Changelog" = "https://github.com/ucid-foundation/ucid/blob/main/CHANGELOG.md"
"Release Notes" = "https://github.com/ucid-foundation/ucid/releases"

# Bug Tracker (custom icon)
"Bug Tracker" = "https://github.com/ucid-foundation/ucid/issues"
"Issues" = "https://github.com/ucid-foundation/ucid/issues"

# Funding (custom icon)
"Funding" = "https://github.com/sponsors/ucid-foundation"
"Sponsor" = "https://github.com/sponsors/ucid-foundation"

# CI Services (custom icons)
"Codecov" = "https://codecov.io/gh/ucid-foundation/ucid"
"CI" = "https://github.com/ucid-foundation/ucid/actions"

# Python Ecosystem (custom icons)
"Python" = "https://www.python.org/"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ucid = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
exclude = ["notebooks"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "E501", "B008", "B904", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
packages = ["ucid"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "h3.*",
    "geopandas.*",
    "shapely.*",
    "osmnx.*",
    "networkx.*",
    "folium.*",
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "rasterio.*",
    "ray.*",
    "dask.*",
    "sqlalchemy.*",
    "geoalchemy2.*",
    "opentelemetry.*",
    "aiohttp.*",
    "pyarrow.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["src/ucid"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
